Expanded gui features

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -50,6 +50,7 @@ train-switched-to-manual = Train switched to manual mode
 locomotive-not-found = Locomotive not found
 train-not-found = Train not found
 spidertron-occupied = Vehicle occupied
+view-vehicle-camera= Click to open camera
 
 [controls]
 shortcut-toggle=Open Vehicle Control Center
